[metadata]
name = first-python-package
version = 0.0.1
description = This package does amazing things.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/daneah/publishing-python-packages
author = Dane Hillard
author_email = "Dane Hillard" <github@danehillard.com>
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    termcolor>=1.1.0,<2

[options.extras_require]
dev =
    pytest

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    harmony = imppkg.harmony:main

######################
# Tool configuration #
######################

# [tool:pytest]
# testpaths = test
# addopts = --cov --strict-markers
# xfail_strict = True

# [coverage:run]
# source = src/imppkg
# branch = True

# [coverage:report]
# show_missing = True
# skip_covered = False

# [coverage:paths]
# source =
#     src/imppkg
#     */site-packages/imppkg

[tox:tox]
isolated_build = True
envlist = py310

[testenv]
deps =
    pytest
commands =
    # pip install .
    python --version
# python -c "import imppkg; print(imppkg.__file__); from imppkg import harmonic_mean"